<resources>
    <string name="et_add_contact_hint">Enter the name or number query</string>
    <string name="app_name">PTT_3G_Pad</string>
    <string name="version_welcome">"<i><u>VERSION 3.4.3.7</u></i>"</string>
    <string name="typeface">MSYH.ttf</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_serverip">ServerIP</string>
    <string name="hint_port">port</string>
    <string name="hint_contact_nmornb">Enter the name or number query</string>
    <string name="btn_login">Login</string>
    <string name="btn_retry">Retry</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="ckb_savepass">Save my password</string>
    <string name="tv_advancedsettings">Advanced settings</string>
    <string name="tv_hiddensettings">Hidden settings</string>
    <string name="tv_copyright">Copyright © 2016 浙江安正科技有限公司</string>
    <string name="time_separator">:</string>
    <string name="title_intercom">Intercom</string>
    <string name="title_calling">Calling</string>
    <string name="title_meeting">Meeting</string>
    <string name="title_manymeeting">多方通话</string>
    <string name="title_message">Message</string>
    <string name="title_contact">Contact</string>
    <string name="title_position">Position</string>
    <string name="title_monitor">Monitor</string>
    <string name="title_setting">Setting</string>
    <string name="toatal_setting">设置</string>
    <string name="title_intercom_queuing">queuing:</string>
    <string name="title_intercom_speaker">Speaker:</string>
    <string name="title_intercom_states">States:</string>
    <string name="title_intercom_group">Group name:</string>
    <string name="title_intercom_changegroup">change group</string>
    <string name="title_meeting_seleced">Seleced</string>
    <string name="title_meeting_voicing">Voice Conference&#8230;&#8230;</string>
    <string name="title_meeting_videoing">Video conference&#8230;&#8230;</string>
    <string name="title_meeting_broadcasting">Broadcast&#8230;&#8230;</string>
    <string name="title_meeting_principles">principles</string>
    <string name="title_meeting_recreate">recreate</string>
    <string name="btn_meeting_voice">Voice Conference</string>
    <string name="btn_meeting_video">Video conference</string>
    <string name="btn_meeting_broadcast">Broadcast</string>
    <string name="title_monitor_name">name:</string>
    <string name="title_monitor_no">no:</string>
    <string name="title_monitor_date">date:</string>
    <string name="title_monitor_duration">duration:</string>
    <string name="title_monitor_list">list</string>
    <string name="title_monitor_tree">tree</string>
    <string name="title_monitor_recreate">recreate</string>
    <string name="title_monitor_setting_title">Video monitoring parameter configuration</string>
    <string name="title_monitor_setting_camera">Camera:</string>
    <string name="title_monitor_setting_answer">Answering the way:</string>
    <string name="title_monitor_setting_answer_auto">Auto</string>
    <string name="title_monitor_setting_answer_manu">Manu</string>
    <string name="title_monitor_setting_monitor">Monitor the way:</string>
    <string name="title_monitor_setting_monitor_av">AV</string>
    <string name="title_monitor_setting_monitor_video">Video</string>
    <string name="title_monitor_setting_size">Video size:</string>
    <string name="title_monitor_setting_size_720p">720P</string>
    <string name="title_monitor_setting_size_1080p">1080P</string>
    <string name="title_monitor_setting_size_cif">CIF</string>
    <string name="title_monitor_setting_size_qcif">QCIF</string>
    <string name="title_monitor_setting_size_d1">D1</string>
    <string name="title_contact_local">Local contacts</string>
    <string name="title_talkgrp">对讲组</string>
    <string name="title_contact_system">System contacts</string>
    <string name="title_setting_dispatcher">Dispatcher</string>
    <string name="title_setting_intercom">Intercom</string>
    <string name="title_setting_video">Video</string>
    <string name="title_setting_other">Other</string>
    <string name="title_setting_outno">Out</string>
    <string name="title_setting_dispather">Dispather</string>
    <string name="title_setting_gis">Gis</string>
    <string name="title_setting_onekey">一键拍传</string>
    <string name="title_setting_logout">Logout</string>
    <string name="title_setting_exit">Exit</string>
    <string name="title_setting_about">关于</string>
    <string name="title_setting_version">VERSION 3.5.5.1</string>
    <string name="title_setting_reserved">浙江安正科技有限公司</string>
    <string name="title_setting_officialwebsite">http://www.angelcomm.cn</string>
    <string name="title_setting_phoneno">010–87581247</string>
    <string name="title_setting_dispatcher_title">Connection scheduling machine configuration</string>
    <string name="title_setting_dispatcher_username">username:</string>
    <string name="title_setting_dispatcher_password">password:</string>
    <string name="title_setting_dispatcher_serverip">server IP:</string>
    <string name="title_setting_dispatcher_port">server port:</string>
    <string name="title_setting_intercom_priority">intercom priority</string>
    <string name="title_setting_intercom_highpriority">high priority:</string>
    <string name="title_setting_intercom_samepriority">with priority:</string>
    <string name="title_setting_intercom_lowpriority">low priority:</string>
    <string name="title_setting_intercom_defaultgroup">default group:</string>
    <string name="title_setting_intercom_ringtone">ring tone:</string>
    <string name="title_setting_intercom_msg">Will only take effect after restart the software</string>
    <string name="title_setting_video_camera">camera set</string>
    <string name="title_setting_video_camera_front">front</string>
    <string name="title_setting_video_startup">StartUp</string>
    <string name="title_setting_video_close">Close</string>
    <string name="title_setting_video_camera_USB">USB Camera</string>
    <string name="title_setting_video_camera_rear">rear</string>
    <string name="title_setting_video_camera_rotate0">0 degree</string>
    <string name="title_setting_video_camera_rotate90">90 degree</string>
    <string name="title_setting_video_camera_rotate180">180 degree</string>
    <string name="title_setting_video_camera_rotate270">270 degree</string>
    <string name="title_setting_video_bitrate">Bitrate(30&#8211;10000)(kbps)</string>
    <string name="title_setting_video_framerate">Framerate(fps)</string>
    <string name="title_setting_video_sendBuffer">Send cache size unit K (default 128K)（0&#8211;30）（fps）</string>
    <string name="title_setting_video_receiveBuffer">Receive cache size unit K (default 128K)（0&#8211;30）（fps）</string>
    <string name="title_setting_video_resolution">resolution set</string>
    <string name="title_setting_video_resolution_1080P">1080P(1920*1080)</string>
    <string name="title_setting_video_resolution_720P">720P(1280*720)</string>
    <string name="title_setting_video_resolution_vga">VGA(640*480)</string>
    <string name="title_setting_video_resolution_d1">D1(704*576)</string>
    <string name="title_setting_video_resolution_cif">CIF(288*352)</string>
    <string name="title_setting_video_resolution_qvga">QVGA(240*320)</string>
    <string name="wrong_loginHasFailed">initError</string>
    <string name="title_setting_other_encrypt">Whether or not to output a log</string>
    <string name="title_setting_other_stun">Whether to enable NAT</string>
    <string name="title_setting_other_startup">Is powered up</string>
    <string name="title_setting_other_netmonitor">Whether to open FEC</string>
    <string name="title_setting_other_setFir">Optimize the quality of video recording</string>
    <string name="title_setting_other_outsidecall">Preferential Outside Call</string>
    <string name="title_setting_logout_title">Determine the cancellation of the current account?</string>
    <string name="btn_setting_exit">Safety exit</string>
    <string name="btn_setting_about_checkversion">Check version</string>
    <string name="btn_position_visible">VISIBLE</string>
    <string name="btn_position_gone">GONE</string>
    <string name="btn_position_pushvideo">PushVideo</string>
    <string name="btn_position_info">Info</string>
    <string name="btn_position_close">Close</string>
    <string name="btn_calling_holdon">hold on</string>
    <string name="title_main_exitinfo">alert</string>
    <string name="title_main_ifexit">completely exit ?</string>
    <string name="title_main_minialmize">minimize</string>
    <string name="title_main_exit">exit</string>
    <string name="title_meeting_title">info</string>
    <string name="title_meeting_info">Monitor is showing.</string>
    <string name="title_monitor_title">info</string>
    <string name="title_monitor_info">video meeting is showing.</string>
    <string name="btn_calling_answer">接听</string>
    <string name="btn_calling_decline">忽略</string>
    <string name="btn_calling_handsfree">免提</string>
    <string name="btn_calling_hangup">挂断</string>
    <string name="btn_calling_invitejoin">邀请入会</string>
    <string name="btn_calling_member">成员</string>
    <string name="btn_calling_mute">静音</string>
    <string name="sp_stun">PTT_SP_STUN</string>
    <string name="title_message_clear">清空</string>
    <string name="title_message_copy">复制</string>
    <string name="title_message_delete">删除</string>
    <string name="title_message_edit">编辑</string>
    <string name="title_message_forward">转发</string>
    <string name="title_message_reply">回复</string>
    <string name="title_message_voice">音频</string>
    <string name="title_message_video">视频</string>
    <string name="title_postion_3g">智能终端</string>
    <string name="title_postion_all">全选</string>
    <string name="title_postion_click">点选</string>
    <string name="title_postion_circle">圈选</string>
    <string name="title_postion_monitor">监控设备</string>
    <string name="title_postion_range">范围：</string>
    <string name="title_postion_rectangle">框选</string>
    <string name="title_postion_search">查询</string>
    <string name="title_postion_sip">SIP终端</string>
    <string name="default_username" />
    <string name="default_password" />
    <string name="default_serverip" />
    <string name="default_port">5060</string>
    <string name="default_video_bitrate">100</string>
    <string name="sp_username">PTT_SP_USERNAME</string>
    <string name="sp_password">PTT_SP_PASSWORD</string>
    <string name="sp_savepass">PTT_SP_SAVEPASS</string>
    <string name="sp_serverip">PTT_SP_SERVERIP</string>
    <string name="sp_port">PTT_SP_PORT</string>
    <string name="sp_intercom_highpriority">PTT_SP_INTERCOM_HIGHPRIORITY</string>
    <string name="sp_intercom_samepriority">PTT_SP_INTERCOM_SAMEPRIORITY</string>
    <string name="sp_intercom_lowpriority">PTT_SP_INTERCOM_LOWPRIORITY</string>
    <string name="sp_intercom_defaultgroup">PTT_SP_INTERCOM_DEFAULTGROUP</string>
    <string name="sp_intercom_defaultringtone">PTT_SP_INTERCOM_DEFAULTRINGTONE</string>
    <string name="sp_video_camera">PTT_SP_VIDEO_CAMERA</string>
    <string name="sp_video_rotate">PTT_SP_VIDEO_ROTATE</string>
    <string name="sp_video_bitrate">PTT_SP_VIDEO_BITRATE</string>
    <string name="sp_video_resolution">PTT_SP_VIDEO_RESOLUTION</string>
    <string name="sp_debug_on">PTT_SP_DEBUG_ON</string>
    <string name="sp_encryption">PTT_SP_ENCRYPTION</string>
    <string name="sp_auto_start">PTT_AUTO_START</string>
    <string name="sp_start_suspend">PTT_START_SUSPEND</string>
    <string name="sp_showorhidden">PTT_SP_SHOWORHIDDEN</string>
    <string name="title_postion_dispather">调度台</string>
    <string name="text_mode_normal">NORMAL</string>
    <string name="text_mode_in_call">IN_CALL</string>
    <string name="text_mode_in_communication">IN_COMMUNICATION</string>
</resources>