<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/rg_AudioManger"
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:textColor="#ffffff"
            android:layout_margin="10dp"
            android:id="@+id/rb_normal"
            android:text="@string/text_mode_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioButton
            android:textColor="#ffffff"
            android:layout_margin="10dp"
            android:id="@+id/rb_in_call"
            android:text="@string/text_mode_in_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioButton
            android:textColor="#ffffff"
            android:layout_margin="10dp"
            android:id="@+id/rb_in_communication"
            android:text="@string/text_mode_in_communication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RadioGroup>

</LinearLayout>