<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    <LinearLayout 
    android:layout_width="@dimen/set_layout_pos_multiple_width"
    android:layout_height="@dimen/set_layout_pos_multiple_height"
    android:background="@drawable/pos_multiple_bg"
    android:gravity="center_vertical"
    android:orientation="horizontal">
        
    

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/pos_multiple_point"
            android:contentDescription="@string/app_name" />

        <TextView android:id="@+id/btnSelClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_postion_click"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/pos_multiple_circle"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_postion_circle"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone" >

        <CheckBox
            android:id="@+id/chbox_rectangle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_postion_rectangle"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout 
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/pos_multiple_all"
            android:contentDescription="@string/app_name" />

        <TextView android:id="@+id/btnMultipleAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_postion_all"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>
</LinearLayout>