<?xml version="1.0" encoding="utf-8"?>
<!-- 配置-注销当前账号 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:paddingLeft="@dimen/set_intercomFragment_paddingleft"
    android:paddingRight="@dimen/set_intercomFragment_paddingright"
    android:paddingTop="@dimen/set_intercomFragment_paddingtop">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/title_setting_logout_title"
        android:textSize="@dimen/set_dipatchsetting_textSize" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:paddingTop="80dp" >

        <Button
            android:id="@+id/btn_ok"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_login_cancel"
            android:contentDescription="@string/btn_ok"
            android:text="@string/btn_ok"
            android:textColor="@android:color/white"
            android:textSize="@dimen/set_dipatchsetting_textSize" />

        <Button
            android:id="@+id/btn_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_login_cancel"
            android:contentDescription="@string/btn_cancel"
            android:text="@string/btn_cancel"
            android:textColor="@android:color/white"
            android:textSize="@dimen/set_dipatchsetting_textSize"
            android:visibility="gone" />
    </LinearLayout>

</RelativeLayout>