<?xml version="1.0" encoding="utf-8"?>
<!-- 通讯录页面 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".ContactActivity" >

    <LinearLayout
        android:id="@+id/ll_tab"
        android:layout_width="match_parent"
        android:layout_height="@dimen/set_activity_contact_ll_tab_height"
        android:background="@color/contact_title_bg" >
        <TextView
            android:id="@+id/tv_system"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:drawableBottom="@drawable/tab_seleted"
            android:gravity="center"
            android:text="@string/title_contact_system"
            android:textColor="@color/contact_title_selected"
            android:textSize="@dimen/set_activity_contact_topmuen_textSize" />

        <TextView
            android:id="@+id/tv_local"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:drawableBottom="@drawable/tab_unseleted"
            android:gravity="center"
            android:text="@string/title_contact_local"
            android:textColor="@color/contact_title_unselected"
            android:textSize="@dimen/set_activity_contact_topmuen_textSize" />


    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vPager"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_gravity="center"
        android:layout_weight="1.0"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />

    <LinearLayout
        android:id="@+id/ll_oper"
        android:layout_width="match_parent"
        android:layout_height="@dimen/set_activity_contact_ll_oper_height"
        android:background="@drawable/page_footer"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/set_activity_contact_ll_oper_marginleft"
        android:paddingRight="@dimen/set_activity_contact_ll_oper_marginright" >

        <Button
            android:id="@+id/btn_add"
            android:layout_width="@dimen/set_activity_contact_btn_add_width"
            android:layout_height="@dimen/set_activity_contact_btn_add_height"
            android:background="@drawable/contact_add" />

        <EditText
            android:id="@+id/et_nmornb"
            android:layout_width="match_parent"
            android:layout_height="@dimen/set_activity_contact_et_nmornb_height"
            android:layout_marginLeft="@dimen/set_activity_contact_et_nmornb_marginleft"
            android:background="@drawable/metting_edit_bg"
            android:drawableLeft="@drawable/username"
            android:hint="@string/hint_contact_nmornb"
            android:inputType="text"
            android:maxLength="20"
            android:textColor="@android:color/black"
            android:textSize="@dimen/set_activity_contact_et_nmornb_textSize" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_sel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:visibility="gone" >

        <Button
            android:id="@+id/btnSelContactOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_calling_click"
            android:text="@string/btn_ok" />

        <Button
            android:id="@+id/btnSelContactCanel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_calling_click"
            android:text="@string/btn_cancel" />
    </LinearLayout>

</LinearLayout>